<resources>
    <string name="app_name">샵인샵</string>
    <string name="file_provider" translatable="false">com.kroegerama.imgpicker.demo.fileprovider</string>
    <string name="pick_single">Please select your image</string>
    <plurals name="pick_multi">
        <item quantity="one">1개의 이미지가 선택되었습니다.</item>
        <item quantity="other">%1$d개의 이미지가 선택되었습니다.</item>
    </plurals>
    <plurals name="pick_multi_more">
        <item quantity="one">1개의 이미지를 더 선택해주세요.</item>
        <item quantity="other">%1$d개의 이미지를 더 선택해주세요.</item>
    </plurals>
    <string name="pick_multi_limit">최대 %1$d개의 이미지를 선택해주세요.</string>
    <string name="rationale_title">권한이 필요합니다.</string>
    <string name="rationale_message"><b>위치정보</b>에 접근하기 위해 권한이 필요합니다.</string>
    <string name="album_rationale_message"><b>앨범</b>에 접근하기 위해 권한이 필요합니다.</string>
    <string name="create">등록</string>
    <string name="selected">선택</string>
    <string name="search">검색</string>
    <string name="modify">수정</string>
    <string name="join">가입</string>
    <string name="image">사진</string>
    <string name="completion">완료</string>
    <string name="like">좋아요</string>
    <string name="map">지도</string>
    <string name="mypage">마이페이지</string>
    <string name="review_create">리뷰 등록</string>
    <string name="review_modify">리뷰 수정</string>
    <string name="review_create_message">리뷰를 남겨주세요</string>
    <string name="image_register">사진 등록</string>
    <string name="reset">리셋</string>
    <string name="course_share">코스 공유</string>
    <string name="course_title">코스 제목</string>
    <string name="course_first">첫번째 코스</string>
    <string name="course_second">두번째 코스</string>
    <string name="course_third">세번째 코스</string>
    <string name="course_create">코스 등록</string>
    <string name="course_explanation">코스 설명</string>
    <string name="course_title_hint">코스 제목을 입력하세요 (최대 20자)</string>
    <string name="course_explanation_hint">코스에 대한 설명을 입력하세요</string>
    <string name="course_title_image">사진(대표사진)</string>
    <string name="place_selected_first">첫번째 장소 선택</string>
    <string name="place_selected_second">두번째 장소 선택</string>
    <string name="place_selected_third">세번째 장소 선택</string>
    <string name="course_modify">코스 수정</string>
    <string name="my_course">나의 코스</string>
    <string name="my_place">나의 장소</string>
    <string name="my_review">나의 리뷰</string>
    <string name="information">정보</string>
    <string name="review">리뷰</string>
    <string name="place_create">장소 등록</string>
    <string name="place_modify">장소 수정</string>
    <string name="place_name">장소명</string>
    <string name="keyword">키워드</string>
    <string name="address">주소</string>
    <string name="business_hours">영업시간</string>
    <string name="phone_number">전화번호</string>
    <string name="detail_description">상세설명</string>
    <string name="place_title_hint">장소명을 입력하세요 (최대 20자)</string>
    <string name="keyword_hint">키워드를 선택하세요</string>
    <string name="address_hint">주소를 검색하세요</string>
    <string name="detail_address_hint">상세주소를 입력하세요</string>
    <string name="place_phone_number_hint">- 없이 번호만 입력하세요</string>
    <string name="place_detail_description_hint">장소에 대한 설명을 입력하세요</string>
    <string name="member_join">회원가입</string>
    <string name="member_info_modify">회원정보 수정</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="email_search">이메일 찾기</string>
    <string name="member_email_search">회원님의 이메일은</string>
    <string name="password_search">비밀번호 찾기</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="info">샵인샵 소개</string>
    <string name="privacy">개인정보 수집 및 이용</string>
    <string name="member_delete">회원 탈퇴</string>
    <string name="search_word">장소 검색</string>
    <string name="place_name_test">구슬모아당구장</string>
    <string name="introduction">샵인샵 소개</string>
    <string name="intro">샵인샵(# in shop)은 \&apos;가게 안에 테마(해시태그(#))\&apos;라는 뜻입니다.
        \n\n 또 다른 말로 카멜레존(Chamelezone)\&apos;이라고도 소개 할 수 있는데요.
        \n 카멜레존이란 \&apos;카멜레온\&apos;과 공간을 뜻하는 \&apos;존(zone)\&apos;을 합친 신조어로 원래의 용도와는 달리 상황에 맞게 변화하는 공간을 뜻합니다.
        \n 저희 샵인샵 어플은 카멜레존이라는 단어처럼 한 공간에 여러 상점이나 테마들이 있는 곳들을 소개하는 것이 목적입니다.
        \n 또한 사용자들이 보다 쉽게 찾고, 찾아갈 수 있도록 서비스를 제공하고자 합니다.</string>
    <string name="permission_msg">만약 권한 허가를 거부한다면, 이 서비스를 사용할 수 없습니다. [설정] > [사용 권한]에서 사용 권한을 설정하십시오.</string>
    <string name="Permission_denied">권한 거부</string>
    <string name="setting">설정</string>
    <string name="information_not_exist">입력하신 정보는 존재하지 않습니다.</string>
    <string name="available_email">사용 가능한 이메일입니다.</string>
    <string name="registered_email">이미 가입된 이메일입니다.</string>
    <string name="available_nickname">사용 가능한 닉네임입니다.</string>
    <string name="registered_nickname">이미 가입된 닉네임입니다.</string>
    <string name="email_format">이메일 형식이 올바르지 않습니다.</string>
    <string name="password_format">영문, 숫자 조합 8~16자로 입력해주세요.</string>
    <string name="nickname_format">한글, 영문, 숫자 포함 1~10자로 입력해주세요.</string>
    <string name="enter_email">이메일을 입력해주세요.</string>
    <string name="enter_password">비밀번호를 입력해주세요.</string>
    <string name="enter_nickname">닉네임을 입력해주세요.</string>
    <string name="enter_name">이름을 입력해주세요.</string>
    <string name="enter_phone_number">전화번호를 입력해주세요.</string>
    <string name="successful_member_info_modification">회원 정보 수정 성공</string>
    <string name="enter_search">검색어를 입력해주세요</string>
    <string name="check_email_password_again">이메일과 비밀번호를 확인 후 다시 로그인해주세요.</string>
    <string name="select_like">좋아요 목록에 추가되었습니다</string>
    <string name="delete_like">좋아요 목록에서 삭제되었습니다</string>
    <string name="really_logout">정말 로그아웃 하시겠습니까?</string>
    <string name="really_delete">정말 탈퇴하시겠습니까?</string>
    <string name="sunday">일요일</string>
    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="register_my_place">장소 등록을 해보세요.</string>
    <string name="register_my_course">코스 등록을 해보세요.</string>
    <string name="enter_course_title">코스 제목을 입력해주세요.</string>
    <string name="enter_course_content">코스에 대한 설명을 입력해주세요.</string>
    <string name="enter_place">장소를 선택해주세요.</string>
    <string name="enter_course_image">코스 대표 사진을 선택해주세요.</string>
    <string name="enter_place_name">장소 이름을 입력해주세요.</string>
    <string name="enter_place_keyword">키워드를 선택해주세요.</string>
    <string name="enter_place_address">주소를 입력해주세요.</string>
    <string name="enter_place_opening_hours">영업시간을 선택해주세요.</string>
    <string name="enter_place_phone">전화번호를 입력해주세요.</string>
    <string name="enter_place_content">장소에 대한 설명을 입력해주세요.</string>
    <string name="enter_place_image">장소 사진을 선택해주세요.</string>
    <string name="selected_place">이미 선택된 장소 입니다.</string>
    <string name="success_register_course">코스 등록 성공</string>
    <string name="success_delete_course">코스 삭제 성공</string>
    <string name="click_heart">마음에 드는 장소를 발견하면\n하트를 눌러 보세요.</string>
    <string name="success_register_member">회원 가입 성공</string>
    <string name="success_delete_member">회원 탈퇴 성공</string>
    <string name="success_register_place">장소 등록 성공</string>
    <string name="no_place_found">검색하신 장소가 없습니다.</string>
    <string name="auto_login_fail">자동 로그인 실패</string>
    <string name="registered_place">이미 등록된 장소입니다.</string>
    <string name="registered_place_message">등록하고자 하는 장소가 등록되어 있는지 확인합니다.</string>
    <string name="check_place">장소 확인</string>
    <string name="change_pw">비밀번호 변경</string>
    <string name="new_pw">새 비밀번호</string>
    <string name="check_new_pw">새 비밀번호 확인</string>
    <string name="certification">인증</string>
    <string name="security_code">보안코드</string>
    <string name="send_email_security_code">이메일로 보안코드가 전송되었습니다.</string>
    <string name="not_match_pw">비밀번호가 일치하지 않습니다.</string>
    <string name="changed_pw">비밀번호가 변경되었습니다.\n새로운 비밀번호로 로그인 하실 수 있습니다.</string>
    <string name="not_match_security_code">보안코드가 일치하지 않습니다.</string>
    <string name="select_two_places">2개 이상의 장소를 선택해주세요.</string>
    <string name="sunday_closed">일요일 휴무</string>
    <string name="monday_closed">월요일 휴무</string>
    <string name="tuesday_closed">화요일 휴무</string>
    <string name="wednesday_closed">수요일 휴무</string>
    <string name="thursday_closed">목요일 휴무</string>
    <string name="friday_closed">금요일 휴무</string>
    <string name="saturday_closed">토요일 휴무</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="first_title">1. 개인정보의 처리 목적</string>
    <string name="first_content">&lt;연애용&gt;(이하 \&apos;회사\&apos; ) 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.\n- 고객 가입의사 확인, 고객에 대한 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 물품 또는 서비스 공급에 따른 금액 결제, 물품 또는 서비스의 공급·배송 등</string>
    <string name="second_title">2. 개인정보의 처리 및 보유 기간</string>
    <string name="second_content"><![CDATA[①]]> &lt;연애용&gt;(이하 \&apos;회사\&apos; ) 은(는) 정보주체로부터 개인정보를 수집할 때 동의 받은 개인정보 보유·이용기간 또는 법령에 따른 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.\n<![CDATA[②]]> 구체적인 개인정보 처리 및 보유 기간은 다음과 같습니다.\n<![CDATA[☞]]> 아래 예시를 참고하여 개인정보 처리업무와 개인정보 처리업무에 대한 보유기간 및 관련 법령, 근거 등을 기재합니다.\n- 고객 가입 및 관리 : 서비스 이용계약 또는 회원가입 해지시까지, 다만 채권·채무관계 잔존시에는 해당 채권·채무관계 정산시까지\n- 전자상거래에서의 계약·청약철회, 대금결제, 재화 등 공급기록 : 5년</string>
    <string name="third_title">3. 정보주체와 법정대리인의 권리·의무</string>
    <string name="third_content">정보주체와 법정대리인의 권리·의무 및 그 행사방법 이용자는 개인정보주체로써 다음과 같은 권리를 행사할 수 있습니다.\n<![CDATA[①]]> 정보주체는 &lt;연애용&gt;(이하 \&apos;회사\&apos; ) 에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.\n1. 개인정보 열람요구\n2. 오류 등이 있을 경우 정정 요구\n3. 삭제요구\n4. 처리정지 요구</string>
    <string name="fourth_title">4. 처리하는 개인정보의 항목 작성</string>
    <string name="fourth_content"><![CDATA[①]]> &lt;연애용&gt;(이하 \&apos;회사\&apos; ) 은(는) 다음의 개인정보 항목을 처리하고 있습니다.\n1. &lt;회원관리 및 서비스 이용&gt;\n- 필수항목 : 이메일, 전화번호, 비밀번호, 이름, 닉네임</string>
    <string name="fifth_title">5. 개인정보의 파기</string>
    <string name="fifth_content">&lt;연애용&gt;(이하 \&apos;회사\&apos; )은(는) 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.\n- 파기절차\n이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져(종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시 파기됩니다. 이 때, DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.\n- 파기기한\n이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 폐지, 사업의 종료 등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 파기합니다.</string>
    <string name="sixth_title">6. 개인정보 보호책임자 작성</string>
    <string name="sixth_content">① &lt;연애용&gt;(이하 \&apos;회사\&apos; ) 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.\n▶ 개인정보 보호책임자\n성명 : 최용권\n직책 : 팀장\n연락처 :01023729741\n※ 개인정보 보호 담당부서로 연결됩니다.\n▶ 개인정보 보호 담당부서\n부서명 :개인정보 보호 담당\n담당자 :최용권\n연락처 :01023729741\n② 정보주체께서는 &lt;연애용&gt;(이하 \&apos;회사\&apos; ) 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. &lt;연애용&gt;(이하 \&apos;회사\&apos; ) 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.</string>
    <string name="seventh_title">7. 개인정보 처리방침 변경</string>
    <string name="seventh_content">① 이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.</string>
    <string name="eighth_title">8. 개인정보의 안전성 확보 조치</string>
    <string name="eighth_content">&lt;연애용&gt;(이하 \&apos;회사\&apos; ) 은(는) 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.\n① 정기적인 자체 감사 실시\n개인정보 취급 관련 안정성 확보를 위해 정기적(분기 1회)으로 자체 감사를 실시하고 있습니다.\n② 개인정보 취급 직원의 최소화 및 교육\n개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.\n③ 내부관리계획의 수립 및 시행\n개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.\n④ 개인정보에 대한 접근 제한\n개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.</string>
</resources>